Fixes #2 - Methode appliquerEffet